Graph, Playground: Various updates - add getters for GraphAgent state - add various method overloads for GraphAgent methods - cleanup playground